# Advista

./: .env  .gitignore  README.md  bun.lockb  components.json  next.config.mjs  package-lock.json  package.json  staticwebapp.config.json  tailwind.config.ts  vite.config.js
.github/workflows/: azure-static-web-apps-delightful-moss-08d713800.yml
api/: decisions.md  pyproject.toml  test.py
api/prisma/: schema.prisma
api/src/: main.py
api/src/controllers/: chat.controller.py  chat_controller.py  research_controller.py
api/src/models/: research_brief.py  research_report.py  search_params.py
api/src/prompts/: chatbot.py  research.py  url.py
api/src/services/: chat.service.py  chat_service.py  database_service.py  research_service.py  url_service.py
api/src/utils/: config.py  llm.py  scrape.py  search.py
app/: globals.css  layout.tsx  page.tsx
app/call-to-action/: page.tsx
app/chat/: page.tsx
app/dashboard/: page.tsx
client/: package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  index.css
components/: SmokeSceneComponent.tsx  about.tsx  githubButton.tsx  heroButton.tsx  input-provider.tsx
components/dashboard/: bag-of-words.tsx  insights.tsx  pain-points.tsx  references.tsx
components/ui/: card.tsx  custom-chatbot-button.tsx  footer.tsx  tabs.tsx  wobble-card.tsx  word-cloud.tsx
python-api/: main.py  requirements.txt  session_20250118_220220.json  session_20250118_221242.json  video_processor.py
python-api/test_downloads/: test_video_1.m4a
src/: App.jsx
src/lib/: api.js  keyboard-hooks.js
styles/: grid.css
(+47 files in other folders)
