[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "google-genai>=2.8.0",
    "pydantic-settings>=2.14.1",
    "httpx>=0.28.0",
    "serpapi>=1.0.2",
    "uvicorn>=0.49.0",
    "prisma>=0.15.0",
]
